--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -53,6 +53,15 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_read_timeout 300;
         proxy_connect_timeout 60;
+        proxy_intercept_errors on;
+        error_page 502 503 504 = @api_error;
+    }
+
+    # Fallback JSON response when backend is unavailable
+    location @api_error {
+        default_type application/json;
+        add_header Cache-Control "no-store" always;
+        return 503 '{"error":"Service temporarily unavailable","code":503}';
     }
 
     # Health check
