--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,14 +1,12 @@
 FROM node:22-alpine AS build
 
 ARG VITE_API_URL
-ARG VITE_WS_URL
 ARG VITE_REVERB_APP_KEY
 ARG VITE_REVERB_HOST
 ARG VITE_REVERB_PORT=443
 ARG VITE_REVERB_SCHEME=https
 
 ENV VITE_API_URL=$VITE_API_URL
-ENV VITE_WS_URL=$VITE_WS_URL
 ENV VITE_REVERB_APP_KEY=$VITE_REVERB_APP_KEY
 ENV VITE_REVERB_HOST=$VITE_REVERB_HOST
 ENV VITE_REVERB_PORT=$VITE_REVERB_PORT
@@ -21,8 +19,8 @@ RUN npm install
 
 COPY . .
 
-RUN printf "VITE_API_URL=%s\nVITE_WS_URL=%s\nVITE_REVERB_APP_KEY=%s\nVITE_REVERB_HOST=%s\nVITE_REVERB_PORT=%s\nVITE_REVERB_SCHEME=%s\n" \
-    "$VITE_API_URL" "$VITE_WS_URL" "$VITE_REVERB_APP_KEY" "$VITE_REVERB_HOST" "$VITE_REVERB_PORT" "$VITE_REVERB_SCHEME" \
+RUN printf "VITE_API_URL=%s\nVITE_REVERB_APP_KEY=%s\nVITE_REVERB_HOST=%s\nVITE_REVERB_PORT=%s\nVITE_REVERB_SCHEME=%s\n" \
+    "$VITE_API_URL" "$VITE_REVERB_APP_KEY" "$VITE_REVERB_HOST" "$VITE_REVERB_PORT" "$VITE_REVERB_SCHEME" \
     > .env.production
 
 RUN npm run build:deploy
